--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <label for="average">Average Rating</label><input disabled type="number" id="average" value="0">
       </div>
     </div>
+    <script src="js/ratings.js"></script>
     <footer>
       <span>
         &copy;2019 Pluralsight
